<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/define_dimen_30"
    tools:context=".fragment.LoginFragment">

    <ImageView
        android:id="@+id/img_add_note_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_add_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_notes"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_add_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_30"
        android:autofillHints="title"
        android:background="@android:color/transparent"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_add_note_back" />

    <EditText
        android:id="@+id/edt_add_note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="content"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:background="@android:color/transparent"
        android:hint="@string/your_note_here"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_add_note_title" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_400"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_check_24"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>