<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/define_dimen_30"
    tools:context=".fragment.LoginFragment">

    <ImageView
        android:id="@+id/img_detail_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tv_detail_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/trash"
        android:layout_marginEnd="@dimen/define_dimen_30"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_share"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/delete" />

    <ImageView
        android:id="@+id/tv_detail_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/group_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/share" />

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_dolor"
        android:layout_marginTop="@dimen/define_dimen_30"
        android:autofillHints="title"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_back" />

    <TextView
        android:id="@+id/tv_detail_time_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="content"
        android:text="@string/lorem_ipsum_dolor"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

    <TextView
        android:id="@+id/tv_detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="content"
        android:layout_marginTop="@dimen/define_dimen_30"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_time_create" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/detail_save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_400"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_check_24"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>