<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/define_dimen_20"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F1FD"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AllNoteFragment">

    <TextView
        android:id="@+id/tv_all_notes_title"
        android:text="@string/all_notes"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/define_dimen_20"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toStartOf="@+id/img_all_notes_logo_frame"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/img_all_notes_logo_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_all_notes_title"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_frame" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/define_dimen_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_all_notes_title" />

    <include
        layout="@layout/layout_no_notes_found"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_all_note_add_note"
        app:tint="@color/white"
        app:backgroundTint="@color/purple_400"
        android:src="@drawable/ic_sharp_add_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_note" />

</androidx.constraintlayout.widget.ConstraintLayout>